# reside

./: Dockerfile  README.md  manage.py  pyproject.toml  pythonanywhere_wsgi.py  render.yaml  requirements.txt
.github/workflows/: django.yml
accounts/: admin.py  managers.py  models.py
accounts/migrations/: 0001_initial.py
core/: factories.py
payments/: admin.py  factories.py  models.py
payments/migrations/: 0001_initial.py  0002_alter_rent_room.py  0003_rename_rent_payment_alter_payment_options.py  0004_alter_payment_room.py  0005_payment_created_electricitybill.py  0006_expensecategory_rename_created_payment_payment_date_and_more.py  0007_alter_expensecategory_options_alter_payment_amount_and_more.py
payments/tests/: test_models.py
properties/: admin.py  factories.py  manager.py  models.py
properties/migrations/: 0001_initial.py  0002_initial.py  0003_rename_land_lord_property_land_loard.py  0004_rooms.py  0005_rooms_tenant.py  0006_rooms_capacity.py  0007_alter_rooms_tenant.py  0008_rooms_rent.py  0009_rename_rent_rooms_base_rent.py  0010_electricityreading.py
properties/tests/: test_models.py
reside/: asgi.py  settings.py  urls.py  wsgi.py
src/payments/: admin.py  factories.py  models.py
src/properties/: admin.py  models.py
src/reside/: settings.py  urls.py
src/tenants/: models.py
src/users/: factories.py  manager.py  models.py
tenants/: admin.py  models.py
tenants/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  manager.py  models.py
users/migrations/: 0001_initial.py  0002_alter_customuser_role.py
(+15 files in other folders)
